--- a/member/login.html
+++ b/member/login.html
@@ -1,6 +1,5 @@
-
 <?php 
-include "header.php";
+include "../header.php";
 ?>
 <body>
 <div class="login-section">
@@ -29,8 +28,8 @@ include "header.php";
 			</div>
 			
 			<div class="box-btn">
-				<a href="01_회원가입_01_약관동의.html" class="btn-m-gray">회원가입</a>
-				<a href="02_아이디찾기.html" class="btn-m-gray">ID/PW 찾기</a>
+				<a href="index.php/?mode=step_01" class="btn-m-gray">회원가입</a>
+				<a href="index.php/?mode=find_id" class="btn-m-gray">ID/PW 찾기</a>
 			</div>
 		</div>
 		<div class="login-guide">
@@ -58,7 +57,7 @@ include "header.php";
 			</div>
 		</div>
 	</div>
-	<span class="login-close"><button type="button" class="icon-layer-close" id="close" onclick="history.back();"><span class="hidden">닫기</span></button></span>
+	<span class="login-close"><button type="button" class="icon-layer-close" id="close" onclick="location.href='/member/index.php/?mode=index';"><span class="hidden">닫기</span></button></span>
 </div>
 
 </body>
