--- a/member/step_01.html
+++ b/member/step_01.html
@@ -1,9 +1,9 @@
 <?php 
-include "header.php";
+include "../header.php";
 ?>
 <body>
 <?php
-include "body.php";
+include "../body.php";
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -494,7 +494,7 @@ Aqua Auth 컨텐츠의 녹화차단 - Aqua Director 컨텐츠의 다운로드 DR
 </div>
 
 <?php
-include "footer.php";
+include "../footer.php";
 ?>
 </div>
 <script>
@@ -529,7 +529,7 @@ include "footer.php";
 		
 		}
 		if(chk){
-			location.href="01_회원가입_02_본인확인.html";
+			location.href="step_02.html";
 		}else{
 			alert("모든 약관에 동의하세요");
 			return false;
