--- a/member/complete.html
+++ b/member/complete.html
@@ -1,11 +1,11 @@
 <?php
-include "header.php";
+include "../header.php";
 session_start();
 session_destroy();
 ?>
 <body>
 <?php 
-include "body.php";
+include "../body.php";
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -33,7 +33,7 @@ include "body.php";
 	</div>
 </div>
 <?php
-include "footer.php";
+include "../footer.php";
 ?>
 </div>
 </body>
