--- a/member/modify.html
+++ b/member/modify.html
@@ -1,47 +1,27 @@
 <?php
-	include "header.php";
-	include "db.php";
-	session_start();
-	$pin = $_POST["pin"];
-	$phone1 = $_POST["phone1"];
-	$phone2 = $_POST["phone2"];
-	$phone3 = $_POST["phone3"];
-	$phone = $phone1.'-'.$phone2.'-'.$phone3;
-	$query = "select phone from member where phone='$phone'";
-	$result = mysqli_query($conn, $query);
-	$row = mysqli_fetch_array($result);
-	
-	if($row!=0){
-		echo '<script>alert("등록된 사용자입니다."); location.href="00_로그인.html";</script>';
-	}else{
-		if($_SESSION["pin"] == $pin){
-			echo '<script>alert("인증에 성공하였습니다."); </script>';
-		}else{
-			echo '<script>alert("인증에 실패하였습니다."); history.back();</script>';
-		}
-	}
+include "../header.php";
+include "../db.php";
+session_start();
+$id = $_SESSION['userid'];
+$query = "select uname, phone from member where id='$id'";
+$result = mysqli_query($conn, $query);
+$row = mysqli_fetch_array($result);
+$name = $row['uname'];
+$phone = $row['phone'];
 ?>
 <body>
 <?php
-include "body.php";
+include "../body.php";
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
 		<div class="inner">
 			<div class="tit-box-h3">
-				<h3 class="tit-h3">회원가입</h3>
+				<h3 class="tit-h3">내정보수정</h3>
 				<div class="sub-depth">
 					<span><i class="icon-home"><span>홈</span></i></span>
-					<strong>회원가입</strong>
+					<strong>내정보수정</strong>
 				</div>
-			</div>
-
-			<div class="join-step-bar">
-				<ul>
-					<li><i class="icon-join-agree"></i> 약관동의</li>
-					<li><i class="icon-join-chk"></i> 본인확인</li>
-					<li class="last on"><i class="icon-join-inp"></i> 정보입력</li>
-				</ul>
 			</div>
 
 			<div class="section-content">
@@ -52,22 +32,22 @@ include "body.php";
 						<col style="*"/>
 					</colgroup>
 
-
-					<form name="myform" action="regist.php" method="POST">
+					<form name="myform" action="modify.php" method="POST">
 					<tbody>
 						<tr>
 							<th scope="col"><span class="icons">*</span>이름</th>
-							<td><input type="text" class="input-text" id="name" name="name" style="width:302px" required/></td>
+							<td><?php echo $name;?></td>
 						</tr>
 						<tr>
 							<th scope="col"><span class="icons">*</span>아이디</th>
-							<td><input type="text" class="input-text" id="id" name="id" style="width:302px" minlength="4" maxlength="15" placeholder="영문자로 시작하는 4~15자의 영문소문자, 숫자" required/>
+							<td>
+								<input type="text" class="input-text" id="id" name="id" style="width:302px" placeholder="영문자로 시작하는 4~15자의 영문소문자, 숫자" minlength="4" maxlength="15" required/>
 								<a href="#" class="btn-s-tin ml10" onclick="idChk();">중복확인</a>
 							</td>
 						</tr>
 						<tr>
 							<th scope="col"><span class="icons">*</span>비밀번호</th>
-							<td><input type="password" class="input-text" id="password" name="password" style="width:302px" minlength="8" maxlength="15" placeholder="8-15자의 영문자/숫자 혼합" required/></td>
+							<td><input type="password" class="input-text" id="password" name="password" style="width:302px" placeholder="8-15자의 영문자/숫자 혼합" minlength="8" maxlength="15" required/></td>
 						</tr>
 						<tr>
 							<th scope="col"><span class="icons">*</span>비밀번호 확인</th>
@@ -77,7 +57,7 @@ include "body.php";
 							<th scope="col"><span class="icons">*</span>이메일주소</th>
 							<td>
 								<input type="text" class="input-text" name="email1" style="width:138px" required/> @ <input type="text" class="input-text" name="email2" style="width:138px" required/>
-								<select name="sel" class="input-sel" style="width:160px" onchange="changeSelect(this);">
+								<select class="input-sel" style="width:160px" onchange="changeSelect(this);">
 									<option value="user">직접입력</option>
 									<option value="test1.co.kr">test1.co.kr</option>
 									<option value="test2.com">test2.com</option>
@@ -88,31 +68,27 @@ include "body.php";
 						</tr>
 						<tr>
 							<th scope="col"><span class="icons">*</span>휴대폰 번호</th>
-							<td>
-								<input type="text" class="input-text" name="phone1" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" style="width:50px" value=<?php echo $phone1?> readonly/> - 
-								<input type="text" class="input-text" name="phone2" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" style="width:50px" value=<?php echo $phone2?> readonly/> - 
-								<input type="text" class="input-text" name="phone3" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" style="width:50px" value=<?php echo $phone3?> readonly/>
-							</td>
+							<td><?php echo $phone;?></td>
 						</tr>
 						<tr>
 							<th scope="col"><span class="icons"></span>일반전화 번호</th>
 							<td>
-								<input type="text" class="input-text" id="home1" name="home1" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" style="width:88px" minlength="2" maxlength="3"/>
-								- <input type="text" class="input-text" id="home2" name="home2" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" style="width:88px" minlength="3" maxlength="4"/>
-								- <input type="text" class="input-text" id="home3" name="home3" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" style="width:88px" minlength="4" maxlength="4"/></td>
+								<input type="text" class="input-text" name="home1" return checkNumber(event)" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" minlength="2" maxlength="3" style="width:88px"/>
+								- <input type="text" class="input-text" name="home2" return checkNumber(event)" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" minlength="3" maxlength="4"  style="width:88px"/>
+								- <input type="text" class="input-text" name="home3" return checkNumber(event)" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" minlength="4" maxlength="4"  style="width:88px"/>
+							</td>
 						</tr>
 						<tr>
 							<th scope="col"><span class="icons">*</span>주소</th>
 							<td>
 								<p >
-									<label>우편번호 <input type="text" class="input-text ml5" style="width:242px" id="zip" name="zip" required readonly /></label>
-									<a href="#" class="btn-s-tin ml10" onclick="daum_api();">주소찾기</a>
+									<label>우편번호 <input type="text" id="zip" name="zip" class="input-text ml5" style="width:242px" readonly /></label><a href="#" class="btn-s-tin ml10"  onclick="daum_api();">주소찾기</a>
 								</p>
 								<p class="mt10">
-									<label>기본주소 <input type="text" class="input-text ml5" id="address1" name="address1" style="width:719px" required/></label>
+									<label>기본주소 <input type="text" id="address1" name="address1" class="input-text ml5" style="width:719px" required/></label>
 								</p>
 								<p class="mt10">
-									<label>상세주소 <input type="text" class="input-text ml5" id="address2" name="address2" style="width:719px" required/></label>
+									<label>상세주소 <input type="text" id="address2" name="address2" class="input-text ml5" style="width:719px" required/></label>
 								</p>
 							</td>
 						</tr>
@@ -125,7 +101,7 @@ include "body.php";
 										<span class="input-txt">수신함</span>
 									</label>
 									<label class="input-sp">
-										<input type="radio" name="radio" value="false"/>
+										<input type="radio" name="radio" value="false" />
 										<span class="input-txt">미수신</span>
 									</label>
 								</div>
@@ -141,7 +117,7 @@ include "body.php";
 										<span class="input-txt">수신함</span>
 									</label>
 									<label class="input-sp">
-										<input type="radio" name="radio2" value="false"/>
+										<input type="radio" name="radio2" value="false" />
 										<span class="input-txt">미수신</span>
 									</label>
 								</div>
@@ -152,8 +128,8 @@ include "body.php";
 				</table>
 
 				<div class="box-btn">
-					<!-- <a href="#" class="btn-l">회원가입</a> -->
-					<input type="submit" class="btn-l" onclick="return submitChk();" value="회원가입"> 
+					<!-- <a href="#" class="btn-l">정보수정</a> -->
+					<input type="submit" class="btn-l" value="정보수정" onclick="return submitChk();">
 				</div>
 			</form>
 			</div>
@@ -161,10 +137,10 @@ include "body.php";
 	</div>
 </div>
 <?php
-include "footer.php";
+include "../footer.php";
 ?>
 </div>
-<script>	
+<script>
 	function idChk(){
 		var id = document.getElementById("id").value;
 		if(id){
@@ -220,18 +196,6 @@ include "footer.php";
 		var idChk = document.getElementById("id").readOnly;
 		var pw = document.getElementById("password").value;
 		var pwChk = document.getElementById("passChk").value;
-		var home1 = document.getElementById("home1").value;
-		var home2 = document.getElementById("home2").value;
-		var home3 = document.getElementById("home3").value;
-		if(home1 != '' || home2 != '' || home3 != ''){
-			document.getElementById("home1").required=true;
-			document.getElementById("home2").required=true;
-			document.getElementById("home3").required=true;
-		}else{
-			document.getElementById("home1").required=false;
-			document.getElementById("home2").required=false;
-			document.getElementById("home3").required=false;
-		}
 		if(idChk == false){
 			alert("아이디 중복체크를 해주세요!");
 			return false;
@@ -245,7 +209,6 @@ include "footer.php";
 			return true;
 		}
 	}
-//submit 체크
 </script>
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script>
