--- a/member/login.html
+++ b/member/login.html
@@ -10,7 +10,7 @@ include "../header.php";
 			
 			<div class="login-input">
 				<div class="input-text-box">
-				<form action="login.html" method="post">
+				<form action="login.php" method="post">
 					<input type="text" class="input-text mb5" name="id" placeholder="아이디" style="width:190px" required/>
 					<input type="password" class="input-text" name="password" placeholder="비밀번호" style="width:190px" required/>
 				</div>
