--- a/member/find_id.html
+++ b/member/find_id.html
@@ -17,10 +17,10 @@ include "../body.php";
 			</div>
 
 			<ul class="tab-list">
-				<li class="on"><a href="02_아이디찾기.html">아이디 찾기</a></li>
-				<li><a href="03_비밀번호찾기.html">비밀번호 찾기</a></li>
+				<li class="on"><a href="find_id.html">아이디 찾기</a></li>
+				<li><a href="find_pass.html">비밀번호 찾기</a></li>
 			</ul>
-			<form action="02_아이디찾기완료.html" method="post">
+			<form action="find_id_complete.html" method="post">
 			<div class="tit-box-h4">
 				<h3 class="tit-h4">아이디 찾기 방법 선택</h3>
 			</div>
