--- a/member/find_id_complete.html
+++ b/member/find_id_complete.html
@@ -69,8 +69,8 @@ include "../body.php";
 			</div>
 
 			<div class="box-btn mt30">
-				<a href="00_로그인.html" class="btn-l">로그인하러 가기</a>
-				<a href="03_비밀번호찾기.html" class="btn-l-line ml5">비밀번호 찾기</a>
+				<a href="login.html" class="btn-l">로그인하러 가기</a>
+				<a href="find_pass.html" class="btn-l-line ml5">비밀번호 찾기</a>
 			</div>
 
 		</div>
