--- a/member/complete.html
+++ b/member/complete.html
@@ -25,7 +25,7 @@ include "../body.php";
 			</div>
 
 			<div class="box-btn mt30">
-				<a href="00_로그인.html" class="btn-l">로그인</a>
+				<a href="login.html" class="btn-l">로그인</a>
 				<a href="#" class="btn-l-line ml5">수강신청</a>
 			</div>
 
