--- a/member/step_03.html
+++ b/member/step_03.html
@@ -12,7 +12,7 @@
 	$row = mysqli_fetch_array($result);
 	
 	if($row!=0){
-		echo '<script>alert("등록된 사용자입니다."); location.href="00_로그인.html";</script>';
+		echo '<script>alert("등록된 사용자입니다."); location.href="login.html";</script>';
 	}else{
 		if($_SESSION["pin"] == $pin){
 			echo '<script>alert("인증에 성공하였습니다."); </script>';
@@ -20,6 +20,7 @@
 			echo '<script>alert("인증에 실패하였습니다."); history.back();</script>';
 		}
 	}
+	mysqli_close($conn);
 ?>
 <body>
 <?php
@@ -168,7 +169,7 @@ include "../footer.php";
 	function idChk(){
 		var id = document.getElementById("id").value;
 		if(id){
-			url = "idChk.html?id="+id;
+			url = "idChk.php?id="+id;
 			window.open(url,"chkid", "width=500,height=150");
 		}else{
 			alert("아이디를 입력하세요!");
