--- a/member/modify.html
+++ b/member/modify.html
@@ -146,7 +146,7 @@ include "../footer.php";
 	function idChk(){
 		var id = document.getElementById("id").value;
 		if(id){
-			url = "idChk.html?id="+id;
+			url = "idChk.php?id="+id;
 			window.open(url,"chkid", "width=500,height=150");
 		}else{
 			alert("아이디를 입력하세요!");
