--- a/member/find_id.html
+++ b/member/find_id.html
@@ -1,9 +1,10 @@
 <?php
-include "../header.php";
+include "../call_index.php";
+call_header();
 ?>
 <body>
 <?php 
-include "../body.php";
+call_body();
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -129,7 +130,7 @@ include "../body.php";
 </div>
 
 <?php
-include "../footer.php";
+echo footer();
 ?>
 </div>
 <script>
