--- a/member/find_pass.html
+++ b/member/find_pass.html
@@ -1,9 +1,10 @@
 <?php
-include "../header.php";
+include "../call_index.php";
+call_header();
 ?>
 <body>
 <?php
-include "../body.php";
+call_body();
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -104,7 +105,7 @@ include "../body.php";
 	</div>
 </div>
 <?php
-include "../footer.php";
+call_footer();
 ?>
 </div>
 <script>
