--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <?php
-include "header.php";
+include "call_index.php";
+call_header();
 session_start();
 ?>
 <body>
 <?php
-include "body.php";
+call_body();
 ?>
 <div id="container">
 	<div class="main-slider-applyclass">
@@ -379,7 +380,7 @@ $(document).ready(function(){
 </script>
 
 <?php
-include "footer.php";
+call_footer();
 ?>
 </div>
 </body>
