--- a/member/complete.html
+++ b/member/complete.html
@@ -1,11 +1,12 @@
 <?php
-include "../header.php";
+include "../call_index.php";
+call_header();
 session_start();
 session_destroy();
 ?>
 <body>
 <?php 
-include "../body.php";
+call_body();
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -33,7 +34,7 @@ include "../body.php";
 	</div>
 </div>
 <?php
-include "../footer.php";
+call_footer();
 ?>
 </div>
 </body>
