--- a/member/find_id_complete.html
+++ b/member/find_id_complete.html
@@ -1,6 +1,7 @@
 <?php
-include "../header.php";
+include "../call_index.php";
 include "../db.php";
+call_header();
 session_start();
 $_SESSION['pin'] = '123456';
 $radio = $_POST['radio'];
@@ -41,7 +42,7 @@ mysqli_close($conn);
 ?>
 <body>
 <?php 
-include "../body.php";
+call_body();
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -77,7 +78,7 @@ include "../body.php";
 	</div>
 </div>
 <?php
-include "../footer.php";
+call_footer();
 ?>
 </div>
 </body>
