--- a/member/modify.html
+++ b/member/modify.html
@@ -1,6 +1,7 @@
 <?php
-include "../header.php";
+include "../call_index.php";
 include "../db.php";
+call_header();
 session_start();
 $id = $_SESSION['userid'];
 $query = "select uname, phone from member where id='$id'";
@@ -12,7 +13,7 @@ mysqli_close($conn);
 ?>
 <body>
 <?php
-include "../body.php";
+call_body();
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -138,8 +139,7 @@ include "../body.php";
 	</div>
 </div>
 <?php
-
-include "../footer.php";
+call_footer();
 ?>
 </div>
 <script>
