--- a/member/step_01.html
+++ b/member/step_01.html
@@ -1,9 +1,10 @@
 <?php 
-include "../header.php";
+include "../call_index.php";
+call_header();
 ?>
 <body>
 <?php
-include "../body.php";
+call_body();
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -494,7 +495,7 @@ Aqua Auth 컨텐츠의 녹화차단 - Aqua Director 컨텐츠의 다운로드 DR
 </div>
 
 <?php
-include "../footer.php";
+call_footer();
 ?>
 </div>
 <script>
