--- a/member/find_id.html
+++ b/member/find_id.html
@@ -95,7 +95,7 @@ call_body();
 								<input type="text" class="input-text" style="width:50px" id="phone1" name="phone1" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" minlength="3" maxlength="3"/> - 
 								<input type="text" class="input-text" style="width:50px" id="phone2" name="phone2" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" minlength="4" maxlength="4"/> - 
 								<input type="text" class="input-text" style="width:50px" id="phone3" name="phone3" onkeypress="return checkNumber(event)" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" minlength="4" maxlength="4"/>												
-								<a href="#" class="btn-s-tin ml10" onclick="chkPhone()">인증번호 받기</a>
+								<a href="#" class="btn-s-tin ml10" onclick="chkPhone();">인증번호 받기</a>
 							</td>
 						</tr>
 						<tr id="chk_email" style="display: none">
@@ -118,7 +118,7 @@ call_body();
 							<td>
 								<input type="text" name="pin" class="input-text" style="width:478px" />
 								<!-- <a href="#" class="btn-s-tin ml10">인증번호 확인</a> -->
-								<input type="submit" class="btn-s-tin ml10" value="인증번호 확인">
+								<input type="submit" class="btn-s-tin ml10" onclick="return submitChk();" value="인증번호 확인">
 							</td>
 						</tr>
 					</tbody>
@@ -130,7 +130,7 @@ call_body();
 </div>
 
 <?php
-echo footer();
+call_footer();
 ?>
 </div>
 <script>
@@ -175,6 +175,24 @@ echo footer();
     		return true;
   		}
   		return false;
+	}
+	function submitChk(){
+		var t1 = document.getElementById("phone1").readOnly;
+		var t2 = document.getElementById("phone2").readOnly;
+		var t3 = document.getElementById("phone3").readOnly;
+		var e1 = document.getElementById("email1").readOnly;
+		var e2 = document.getElementById("email2").readOnly;
+		if(t1==false && e1==true){
+			alert("인증번호를 받아주세요");
+			return false;
+		}else if(t1==true&&e1==false){
+			alert("이메일 인증번호를 받아주세요");
+			return false;
+		}else{
+			return true;
+		}
+		
+		
 	}
 </script>
 </body>
