--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <?php
 include "call_index.php";
-call_header();
 session_start();
+call_doc();
 ?>
+<header>
+	<?php
+	call_header();
+	?>
+</header>
 <body>
 <?php
 call_body();
