--- a/member/login.html
+++ b/member/login.html
@@ -1,7 +1,12 @@
 <?php 
 include "../call_index.php";
-call_header();
+call_doc();
 ?>
+<header>
+	<?php
+	call_header();
+	?>
+</header>
 <body>
 <div class="login-section">
 	<div class="bg"></div>
