--- a/member/step_01.html
+++ b/member/step_01.html
@@ -1,7 +1,12 @@
 <?php 
 include "../call_index.php";
-call_header();
+call_doc();
 ?>
+<header>
+	<?php
+	call_header();
+	?>
+</header>
 <body>
 <?php
 call_body();
