--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ include "call_index.php";
 session_start();
 call_doc();
 ?>
-<header>
+<head>
 	<?php
 	call_header();
 	?>
-</header>
+</head>
 <body>
 <?php
 call_body();
