--- a/lecture_board/board_list.html
+++ b/lecture_board/board_list.html
@@ -1,7 +1,7 @@
 <?php
 include "../call_index.php";
 include "../db.php";
-call_header();
+call_doc();
 session_start();
 $kind = $_GET['kind'];
 if(isset($_GET['page'])){
@@ -66,6 +66,11 @@ if($row == 0){
 }
 
 ?>
+<head>
+<?php
+call_header();
+?>
+</head>
 <body>
 <?php
 call_body();
@@ -134,7 +139,7 @@ call_body();
 			<caption class="hidden">수강후기</caption>
 			<colgroup>
 				<col style="width:8%"/>
-				<col style="width:8%"/>
+				<col style="width:10%"/>
 				<col style="*"/>
 				<col style="width:15%"/>
 				<col style="width:12%"/>
