--- a/lecture_board/board_update.html
+++ b/lecture_board/board_update.html
@@ -1,8 +1,12 @@
-
 <?php
 include "../call_index.php";
-call_header();
+call_doc();
 ?>
+<head>
+	<?php
+	call_header();
+	?>
+</head>
 <body>
 <?php 
 call_body();
