--- a/member/complete.html
+++ b/member/complete.html
@@ -4,11 +4,11 @@ call_doc();
 session_start();
 session_destroy();
 ?>
-<header>
+<head>
 	<?php
 	call_header();
 	?>
-</header>
+</head>
 <body>
 <?php 
 call_body();
