--- a/member/step_02.html
+++ b/member/step_02.html
@@ -4,11 +4,11 @@ $_SESSION["pin"] = '123456';
 include "../call_index.php";
 call_doc();
 ?>
-<header>
+<head>
 	<?php
 	call_header();
 	?>
-</header>
+</head>
 <body>
 <?php 
 call_body();
