--- a/admin/lecture_insert.html
+++ b/admin/lecture_insert.html
@@ -1,13 +1,17 @@
 <?php
 include "../call_index.php";
-call_header();
+call_doc();
 session_start();
 ?>
+<head>
+	<?php
+		call_header();
+	?>
+</head>
 <body>
 <?php
 call_body();
 ?>
-
 <div id="container" class="container">
 		<table border="0" cellpadding="0" cellspacing="0" class="tbl-col">
 			<caption class="hidden">강의정보</caption>
