--- a/member/step_01.html
+++ b/member/step_01.html
@@ -2,11 +2,11 @@
 include "../call_index.php";
 call_doc();
 ?>
-<header>
+<head>
 	<?php
 	call_header();
 	?>
-</header>
+</head>
 <body>
 <?php
 call_body();
