--- a/lecture_board/board_insert.html
+++ b/lecture_board/board_insert.html
@@ -90,7 +90,7 @@ call_body();
 							<li>
 								<label class="input-sp ico">
 									<input type="radio" name="radio" value="3"/>
-									<span class="input-txt">만점</span>
+									<span class="input-txt">3점</span>
 								</label>
 								<span class="star-rating">
 									<span class="star-inner" style="width:60%"></span>
@@ -99,7 +99,7 @@ call_body();
 							<li>
 								<label class="input-sp ico">
 									<input type="radio" name="radio" value="2"/>
-									<span class="input-txt">만점</span>
+									<span class="input-txt">2점</span>
 								</label>
 								<span class="star-rating">
 									<span class="star-inner" style="width:40%"></span>
@@ -108,7 +108,7 @@ call_body();
 							<li>
 								<label class="input-sp ico">
 									<input type="radio" name="radio" value="1"/>
-									<span class="input-txt">만점</span>
+									<span class="input-txt">1점</span>
 								</label>
 								<span class="star-rating">
 									<span class="star-inner" style="width:20%"></span>
@@ -679,7 +679,7 @@ call_body();
         </script>
         <!-- End: Saving Contents -->
 		<div class="box-btn t-r">
-			<a href="#" class="btn-m-gray">목록</a>
+			<a href="/index.php?mode=list" class="btn-m-gray">목록</a>
 			<input type="submit" class="btn-m ml5" onclick='saveContent()' value="저장">
 		</div>
 </div>
