--- a/lecture_board/board_list.html
+++ b/lecture_board/board_list.html
@@ -183,7 +183,7 @@ call_body();
 								<td>'.$board_num.'</td>
 								<td>'.$lecture_kind.'</td>
 								<td>
-									<a href="#">
+									<a href="board_read.html?page=1&num='.$board_num.'">
 									<span class="tc-gray ellipsis_line">수강 강의명 : '.$lecture_title.'</span>
 									<strong class="ellipsis_line">'.$board_title.'</strong>
 									</a>
