--- a/lecture_board/board_update.html
+++ b/lecture_board/board_update.html
@@ -48,7 +48,7 @@ call_body();
 				<col style="width:15%"/>
 				<col style="*"/>
 			</colgroup>
-            <form name="tx_editor_form" id="tx_editor_form" action="board_insert.php" method="post" accept-charset="utf-8">
+            <form name="tx_editor_form" id="tx_editor_form" action="board_update.php" method="post" accept-charset="utf-8">
 			<tbody>
 				<tr>
 					<th scope="col">강의</th>
